add remote submission

--- a/config/condor_config.template
+++ b/config/condor_config.template
@@ -96,6 +96,7 @@ ALLOW_ADMINISTRATOR = $(CONDOR_HOST)
 ALLOW_OWNER = $(FULL_HOSTNAME), $(ALLOW_ADMINISTRATOR)
 ALLOW_NEGOTIATOR = *
 ALLOW_NEGOTIATOR_SCHEDD = *
+ALLOW_REMOTE_SUBMIT = True
 
 # Flock
 {{ FLOCK_FROM }}
