add debug level

--- a/config/condor_config.template
+++ b/config/condor_config.template
@@ -145,6 +145,7 @@ SEC_ADVERTISE_STARTD_AUTHENTICATION_METHODS = {{ SEC_ADVERTISE_STARTD_AUTHENTICA
 # MASTER or SCHEDD ADDRESS
 {{ NETWORK_INTERFACE_STRING }}
 
+STARTD_DEBUG = D_ALL
 # Define SLOTS
 NUM_SLOTS = {{ NUM_SLOTS }}
 NUM_SLOTS_TYPE_1 = {{ NUM_SLOTS_TYPE_1 }}
