--- a/config/condor_config_schedd.template
+++ b/config/condor_config_schedd.template
@@ -109,34 +109,21 @@ HOSTALLOW_OWNER = $(FULL_HOSTNAME), $(HOSTALLOW_ADMINISTRATOR)
 {{ HOST_ALLOW_FLOCK }}
 
 # Ports
-HIGHPORT = 2048
-LOWPORT = 1024
+HIGHPORT = {{ HIGHPORT }}
+LOWPORT = {{ LOWPORT }}
 USE_SHARED_PORT = True
 
 # Security group
-SEC_DEFAULT_NEGOTIATION = NEVER
-SEC_DEFAULT_AUTHENTICATION = NEVER
+SEC_DEFAULT_AUTHENTICATION = REQUIRED
+SEC_DEFAULT_AUTHENTICATION_METHODS = GSI
+SEC_DEFAULT_INTEGRITY = REQUIRED
 
-SEC_DEFAULT_AUTHENTICATION_METHODS=CLAIMTOBE
-SEC_CLIENT_AUTHENTICATION_METHODS=ANONYMOUS
+CERTIFICATE_MAPFILE = /home/uwdir/condormapfile 
 
-SEC_DEFAULT_AUTHENTICATION_METHODS=CLAIMTOBE
-SEC_READ_AUTHENTICATION_METHODS=CLAIMTOBE
-SEC_WRITE_AUTHENTICATION_METHODS=CLAIMTOBE
-SEC_ADMINISTRATOR_AUTHENTICATION_METHODS=CLAIMTOBE
-SEC_CONFIG_AUTHENTICATION_METHODS=CLAIMTOBE
-SEC_OWNER_AUTHENTICATION_METHODS=CLAIMTOBE
-SEC_DAEMON_AUTHENTICATION_METHODS=ANONYMOUS
-SEC_NEGOTIATOR_AUTHENTICATION_METHODS=CLAIMTOBE
-SEC_ADVERTISE_MASTER_AUTHENTICATION_METHODS=CLAIMTOBE
-SEC_ADVERTISE_STARTD_AUTHENTICATION_METHODS=CLAIMTOBE
-SEC_ADVERTISE_SCHEDD_AUTHENTICATION_METHODS=CLAIMTOBE
+GSI_DAEMON_DIRECTORY = /etc/grid-security
 
-# Security group override
-SEC_DAEMON_AUTHENTICATION_METHODS = {{ SEC_DAEMON_AUTHENTICATION_METHODS }}
-SEC_CLIENT_AUTHENTICATION_METHODS = {{ SEC_CLIENT_AUTHENTICATION_METHODS }}
-SEC_NEGOTIATOR_AUTHENTICATION_METHODS = {{ SEC_NEGOTIATOR_AUTHENTICATION_METHODS }}
-SEC_ADVERTISE_STARTD_AUTHENTICATION_METHODS = {{ SEC_ADVERTISE_STARTD_AUTHENTICATION_METHODS }}
+GSI_DAEMON_NAME = DUMMY
+GSI_DAEMON_PROXY = /root/gwms_proxy
 
 # Condor connection broker
 # Only worker node can have CCB_ADDRESS
