--- a/config/condor_config.template
+++ b/config/condor_config.template
@@ -114,23 +114,20 @@ LOWPORT = 1024
 USE_SHARED_PORT = True
 
 # Security group
-SEC_DEFAULT_NEGOTIATION = NEVER
-SEC_DEFAULT_AUTHENTICATION = NEVER
+SEC_DEFAULT_NEGOTIATION = OPTIONAL 
+SEC_DEFAULT_AUTHENTICATION = OPTIONAL 
+SEC_AUTHENTICATION = OPTIONAL
+SEC_CLIENT_AUTHENTICATION = OPTIONAL 
+SEC_CLIENT_NEGOTIATION = OPTIONAL
 
-SEC_DEFAULT_AUTHENTICATION_METHODS=CLAIMTOBE
-SEC_CLIENT_AUTHENTICATION_METHODS=ANONYMOUS
-
-SEC_DEFAULT_AUTHENTICATION_METHODS=CLAIMTOBE
-SEC_READ_AUTHENTICATION_METHODS=CLAIMTOBE
-SEC_WRITE_AUTHENTICATION_METHODS=CLAIMTOBE
-SEC_ADMINISTRATOR_AUTHENTICATION_METHODS=CLAIMTOBE
-SEC_CONFIG_AUTHENTICATION_METHODS=CLAIMTOBE
-SEC_OWNER_AUTHENTICATION_METHODS=CLAIMTOBE
-SEC_DAEMON_AUTHENTICATION_METHODS=ANONYMOUS
-SEC_NEGOTIATOR_AUTHENTICATION_METHODS=CLAIMTOBE
-SEC_ADVERTISE_MASTER_AUTHENTICATION_METHODS=CLAIMTOBE
-SEC_ADVERTISE_STARTD_AUTHENTICATION_METHODS=CLAIMTOBE
-SEC_ADVERTISE_SCHEDD_AUTHENTICATION_METHODS=CLAIMTOBE
+SEC_DEFAULT_AUTHENTICATION_METHODS = CLAIMTOBE
+SEC_READ_AUTHENTICATION_METHODS = CLAIMTOBE
+SEC_WRITE_AUTHENTICATION_METHODS = CLAIMTOBE
+SEC_ADMINISTRATOR_AUTHENTICATION_METHODS = CLAIMTOBE
+SEC_CONFIG_AUTHENTICATION_METHODS = CLAIMTOBE
+SEC_OWNER_AUTHENTICATION_METHODS = CLAIMTOBE
+SEC_ADVERTISE_MASTER_AUTHENTICATION_METHODS = CLAIMTOBE
+SEC_ADVERTISE_SCHEDD_AUTHENTICATION_METHODS = CLAIMTOBE
 
 # Security group override
 SEC_DAEMON_AUTHENTICATION_METHODS = {{ SEC_DAEMON_AUTHENTICATION_METHODS }}
