fix docker for ccb

--- a/config/condor_config.template
+++ b/config/condor_config.template
@@ -109,8 +109,8 @@ HOSTALLOW_OWNER = $(FULL_HOSTNAME), $(HOSTALLOW_ADMINISTRATOR)
 {{ HOST_ALLOW_FLOCK }}
 
 # Ports
-HIGHPORT = 2048
-LOWPORT = 1024
+HIGHPORT = {{ HIGHPORT }}
+LOWPORT = {{ LOWPORT }}
 USE_SHARED_PORT = True
 
 # Security group
