--- a/config/condor_config_schedd.template
+++ b/config/condor_config_schedd.template
@@ -114,26 +114,16 @@ LOWPORT = {{ LOWPORT }}
 USE_SHARED_PORT = True
 
 # Security group
-SEC_DEFAULT_NEGOTIATION = OPTIONAL 
-SEC_DEFAULT_AUTHENTICATION = OPTIONAL 
-SEC_AUTHENTICATION = OPTIONAL
-SEC_CLIENT_AUTHENTICATION = OPTIONAL 
-SEC_CLIENT_NEGOTIATION = OPTIONAL
+SEC_DEFAULT_AUTHENTICATION = REQUIRED
+SEC_DEFAULT_AUTHENTICATION_METHODS = GSI
+SEC_DEFAULT_INTEGRITY = REQUIRED
 
-SEC_DEFAULT_AUTHENTICATION_METHODS = CLAIMTOBE
-SEC_READ_AUTHENTICATION_METHODS = CLAIMTOBE
-SEC_WRITE_AUTHENTICATION_METHODS = CLAIMTOBE
-SEC_ADMINISTRATOR_AUTHENTICATION_METHODS = CLAIMTOBE
-SEC_CONFIG_AUTHENTICATION_METHODS = CLAIMTOBE
-SEC_OWNER_AUTHENTICATION_METHODS = CLAIMTOBE
-SEC_ADVERTISE_MASTER_AUTHENTICATION_METHODS = CLAIMTOBE
-SEC_ADVERTISE_SCHEDD_AUTHENTICATION_METHODS = CLAIMTOBE
+CERTIFICATE_MAPFILE = /etc/condor/condormapfile
 
-# Security group override
-SEC_DAEMON_AUTHENTICATION_METHODS = {{ SEC_DAEMON_AUTHENTICATION_METHODS }}
-SEC_CLIENT_AUTHENTICATION_METHODS = {{ SEC_CLIENT_AUTHENTICATION_METHODS }}
-SEC_NEGOTIATOR_AUTHENTICATION_METHODS = {{ SEC_NEGOTIATOR_AUTHENTICATION_METHODS }}
-SEC_ADVERTISE_STARTD_AUTHENTICATION_METHODS = {{ SEC_ADVERTISE_STARTD_AUTHENTICATION_METHODS }}
+GSI_DAEMON_DIRECTORY = /etc/grid-security
+
+GSI_DAEMON_NAME = DUMMY
+GSI_DAEMON_CERT = /etc/grid-security/hostcert.pem
 
 # Condor connection broker
 # Only worker node can have CCB_ADDRESS
