--- a/config/condor_config_master.template
+++ b/config/condor_config_master.template
@@ -122,8 +122,8 @@ CERTIFICATE_MAPFILE = /etc/condor/condormapfile
 
 GSI_DAEMON_DIRECTORY = /etc/grid-security
 
-GSI_DAEMON_NAME = /C=IT/O=INFN/OU=Personal Certificate/L=Perugia/CN=Diego Ciangottini
-GSI_DAEMON_CERT = /etc/grid-security/hostcert.pem
+GSI_DAEMON_NAME = DUMMY 
+GSI_DAEMON_CERT = /root/gwms_proxy
 
 
 # Condor connection broker
